# llm-annotator

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING_SUMMARY.md  codecov.yml  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  interrogate-badge.yml  links-html-scheduled.yml  links-md.yml  publish.yml
0.10.0/: index.html  sitemap.xml
0.10.0/api/: index.html
0.10.0/api/annotator/: index.html
0.10.0/api/logging_utils/: index.html
0.10.0/api/utils/: index.html
0.10.0/provider-info/: index.html
0.10.0/search/: search_index.json
0.10.1/: sitemap.xml
0.10.1/api/: index.html
0.10.1/api/annotator/: index.html
0.10.1/api/logging_utils/: index.html
0.10.1/api/utils/: index.html
0.10.1/search/: search_index.json
0.10.2/api/: index.html
0.10.2/api/annotator/: index.html
0.10.2/api/logging_utils/: index.html
0.10.2/api/utils/: index.html
0.10.2/search/: search_index.json
0.10.3/: hooks.py  objects.inv
0.10.3/api/: index.html
0.10.3/api/annotator/: index.html
0.10.3/api/logging_utils/: index.html
0.10.3/api/utils/: index.html
0.10.3/search/: search_index.json
0.10.4/: objects.inv
0.10.4/api/: index.html
0.10.4/api/annotator/: index.html
0.10.4/api/logging_utils/: index.html
0.10.4/api/utils/: index.html
0.10.4/overrides/: main.html
0.10.4/python/material/: class.html.jinja
0.10.4/search/: search_index.json
0.10.5/api/: index.html
0.10.5/api/annotator/: index.html
0.10.5/api/logging_utils/: index.html
0.10.5/api/utils/: index.html
0.10.5/search/: search_index.json
0.10.6/: index.html
0.10.6/api/: index.html
0.10.6/api/annotator/: index.html
0.10.6/api/logging_utils/: index.html
0.10.6/api/utils/: index.html
0.10.6/provider-info/: index.html
0.10.7/: objects.inv
0.10.7/api/: index.html
0.10.7/api/annotator/: index.html
0.10.7/api/logging_utils/: index.html
0.10.7/api/utils/: index.html
0.10.7/search/: search_index.json
0.10.8/: objects.inv  sitemap.xml
0.10.8/api/: index.html
0.10.8/api/annotator/: index.html
0.10.8/api/logging_utils/: index.html
0.10.8/api/utils/: index.html
0.10.8/search/: search_index.json
0.7.3/: 404.html  objects.inv  sitemap.xml
0.7.3/api/: index.html
0.7.3/api/annotator/: index.html
0.7.3/api/logging_utils/: index.html
0.7.3/api/utils/: index.html
0.7.3/search/: search_index.json
0.8.0/: index.html  objects.inv  sitemap.xml
0.8.0/api/: index.html
0.8.0/api/annotator/: index.html
0.8.0/api/logging_utils/: index.html
0.8.0/api/utils/: index.html
0.8.0/search/: search_index.json
0.8.1/: objects.inv  sitemap.xml
0.8.1/api/: index.html
0.8.1/api/annotator/: index.html
0.8.1/api/logging_utils/: index.html
0.8.1/api/utils/: index.html
0.8.1/provider-info/: index.html
0.8.1/python/material/: function.html.jinja
0.8.1/search/: search_index.json
0.9.0/: index.html  objects.inv  sitemap.xml
0.9.0/api/: index.html
0.9.0/api/annotator/: index.html
0.9.0/api/logging_utils/: index.html
0.9.0/api/utils/: index.html
0.9.0/search/: search_index.json
0.9.1/: 404.html
0.9.1/api/: index.html
0.9.1/api/annotator/: index.html
0.9.1/api/logging_utils/: index.html
0.9.1/api/utils/: index.html
0.9.2/: objects.inv  sitemap.xml
0.9.2/api/: index.html
0.9.2/api/annotator/: index.html
0.9.2/api/logging_utils/: index.html
0.9.2/api/utils/: index.html
0.9.2/search/: search_index.json
docs/: api-reference.md  api.md  conf.py  examples.md  getting-started.md  hooks.py  index.md  provider-info.md
docs/api/: annotator.md  logging_utils.md  utils.md
docs/api/clients/: base.md  claude.md  exceptions.md  gemini.md  (+3 more)
examples/: sentiment.py
examples/finemath-dutch/: filter_orig_dataset.py  finemath_dutch.py  preprocess_finemath.py  prompt_prefix.md  prompt_template.md
examples/nemotron-math-dutch/: nemotron_math_dutch.py  prompt_prefix.md  prompt_template.md
examples/ner-from-scratch/: ner_from_scratch.py  prompt_template.md
examples/propella/: gpt_nle_preprocess_finewiki_propella.py  preprocess_finewiki_propella.py  preprocess_propella.py  propella.py
examples/sentiment/: sentiment.py
examples/wiki-nl-mcq/: output.schema.json  preprocess_finewiki_nl.py  prompt_template.md  system_prompt.md  wiki_nl_mcq.py
examples/wiki-nl-qa/: output.schema.json  preprocess_finewiki_nl.py  prompt_prefix.md  prompt_template.md  system_prompt.md  wiki_nl_qa.py
src/llm_annotator/: __init__.py  annotator.py  data.py  logging_utils.py  utils.py
tests/: README.md  conftest.py  test_annotation_workflow.py  test_annotator.py  test_annotator_fast.py  test_annotator_init.py  test_annotator_slow.py  test_annotator_vllm_offline_slow.py  test_clients_base.py  test_dataset_ops.py  test_error_handling.py  test_examples.py  test_file_output.py  test_hub_upload.py  test_integration.py  test_logging_utils.py  test_propella_helpers.py  test_utils.py  test_vllm_offline_client.py  test_vllm_offline_client_unit.py
tests/no_network_clients/: test_claude_client_no_network.py  test_gemini_client_no_network.py  test_openai_client_no_network.py  test_vllm_client_no_network.py
(+94 files in other folders)
