[project]
name = "llm-annotator"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bram Vanroy", email = "2779410+BramVanroy@users.noreply.github.com" }
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1,<5",
    "outlines>=1.2.5,<2",
    "vllm>=0.10.2,<0.11",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823", "E402"]
select = ["C", "E", "F", "W", "I"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["c5"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
